# edd-primera-practica---UNO

./: README.md
lab_edd_practica_oficial_UNO/: CMakeLists.txt  Hola.cpp  Hola.h  main.cpp
lab_edd_practica_oficial_UNO/include/: Carta.h  Jugador.h  Mano.h  MesaJugadores.h  Partida.h  PilaCartas.h
lab_edd_practica_oficial_UNO/src/: Carta.cpp  Jugador.cpp  Mano.cpp  MesaJugadores.cpp  Partida.cpp  PilaCartas.cpp
